# ShaderLab

./: .clang-format  .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hweex/shadertoyandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RenderThread.cpp  Renderer.cpp  Shader.cpp  native_surface.cpp
app/src/main/cpp/include/: ALog.h  Atrace.h  RenderThread.h  Renderer.h  Shader.h
app/src/main/java/com/hweex/shaderlab/: MainActivity.java
app/src/main/java/com/hweex/shaderlab/ui/gallery/: GalleryFragment.java  GalleryViewModel.java
app/src/main/java/com/hweex/shaderlab/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/hweex/shaderlab/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
app/src/main/java/com/hweex/shaderlab/ui/view/: NativeSurfaceView.java
app/src/main/java/com/hweex/shadertoyandroid/ui/view/: NativeSurfaceView.java
app/src/main/res/layout/: app_bar_main.xml  fragment_home.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hweex/shadertoyandroid/: ExampleUnitTest.java
